--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<main id="main"><section id="ij9g"><div class="default-container"><div class="herounit herounit--no-visual herounit--background sms--herounit"><div class="herounit__description"><h1 class="h1 h1--blue">Features - SMS API Platform
+<style>* { box-sizing: border-box; } body {margin: 0;}.h1.h1--blue{text-align:center;}.herounit__h2{text-align:center;}.text{text-align:center;}.btn.btn--green.green-btn{background-color:#0b226a;}.btn.green-btn.btn--green-outline.less-shadow{border:1px solid rgb(43, 176, 49);}</style>
+    <main id="main"><section id="ij9g"><div class="default-container"><div class="herounit herounit--no-visual herounit--background sms--herounit"><div class="herounit__description"><h1 class="h1 h1--blue">Features - SMS API Platform
           </h1><h2 class="herounit__h2">Powerful SMS functionality for your applications at a global scale
           </h2><div class="space--10">
           </div><div class="buttons-container buttons-container--center"><a href="https://console.plivo.com/accounts/register/" data-title-cache="GET STARTED NOW" title="GET STARTED NOW" class="btn btn-primary blue">GET STARTED NOW</a><a href="/talk-to-an-expert/" data-title-cache="TALK TO AN EXPERT" title="TALK TO AN EXPERT" class="btn btn-outline-primary blue less-shadow">TALK TO AN EXPERT</a></div></div></div></div></section><div class="section-gap">
@@ -27,18 +28,18 @@
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-smart-rate-limiting.svg" alt="Smart Rate Limiting" title="Smart Rate Limiting"/></div><div class="usecase-card__heading">Smart Rate Limiting
             </div><div class="usecase-card__desc light-font">Stay compliant with messaging frequency and throughput regulations per source number in each country.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-automatic-opt-out-handling.svg" alt="Automatic Opt-out Handling" title="Automatic Opt-out Handling"/></div><div class="usecase-card__heading">Automatic Opt-out Handling
-            </div><div class="usecase-card__desc light-font">Replies such as “Stop”, “Cancel” are automatically handled for you on long codes. Plivo manages the opt-outs in such cases.
+            </div><div class="usecase-card__desc light-font">Replies such as âStopâ, âCancelâ are automatically handled for you on long codes. Plivo manages the opt-outs in such cases.
             </div></div></div></div></div></section><div class="section-gap">
   </div><section><div class="default-container font--1rem"><div class="features-grid features-grid--big-icon"><div class="features-grid__heading features-grid__heading--padded"><div class="main-heading main-heading--has-line main-heading--extended">Improved
             <br/>Message Delivery
           </div><div class="space--10">
           </div><div>Quality based routing engine and other features to ensure the best deliverability across 200 countries.
           </div></div><div class="features-grid__details"><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-intelligent-message-encoding.svg" alt="Intelligent Message Encoding" title="Intelligent Message Encoding"/></div><div class="usecase-card__heading">Intelligent Message Encoding
-            </div><div class="usecase-card__desc light-font">Plivo replaces unicode characters with similar gsm characters to ensure message delivery to destination networks that don’t support unicode.
+            </div><div class="usecase-card__desc light-font">Plivo replaces unicode characters with similar gsm characters to ensure message delivery to destination networks that donât support unicode.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-number-pooling.svg" alt="Number Pooling" title="Number Pooling"/></div><div class="usecase-card__heading">Number Pooling
             </div><div class="usecase-card__desc light-font">Improve delivery rate by spreading your messages across a pool of phone numbers to reach your users in time.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-conversion-api.svg" alt="Conversion API" title="Conversion API"/></div><div class="usecase-card__heading">Conversion API
-            </div><div class="usecase-card__desc light-font">Real time feedback from your application allows Plivo’s self adjusting quality based routing engine to ensures best delivery.
+            </div><div class="usecase-card__desc light-font">Real time feedback from your application allows Plivoâs self adjusting quality based routing engine to ensures best delivery.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-local-match.svg" alt="Local Match" title="Local Match"/></div><div class="usecase-card__heading">Local Match
             </div><div class="usecase-card__desc light-font">To improve read rates, auto select a local area number as the sender id for each user from a pool of numbers.
             </div></div></div></div></div></section><div class="section-gap">
@@ -64,9 +65,10 @@
               </div></li><li><div class="usecase-card__heading">Reusable Templates
               </div><div class="light-font">With a vast library of ready to use templates you can add powerful functionality quickly by writing minimal code.
               </div></li></ul></div></div></div></section><div class="section-gap">
-  </div><section><div id="ian0aa" class="default-container"><div><div class="main-heading main-heading--section">It’s easy to get started. Sign up for free.
+  </div><section><div id="ian0aa" class="default-container"><div><div class="main-heading main-heading--section">Itâs easy to get started. Sign up for free.
         </div><div class="space--21">
         </div><div class="text">Create your account and receive trial credits or get in touch with us
         </div><div class="space--21">
         </div><div class="buttons-container buttons-container--center"><a href="https://console.plivo.com/accounts/register/" data-title-cache="GET STARTED NOW" title="GET STARTED NOW" class="btn btn--green green-btn">GET STARTED NOW</a><a href="/talk-to-an-expert/" data-title-cache="TALK TO AN EXPERT" title="TALK TO AN EXPERT" class="btn green-btn btn--green-outline less-shadow">TALK TO AN EXPERT</a></div></div></div></section><div class="section-gap">
   </div></main>
+    
