--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head><link rel="stylesheet" href="https://www.plivo.com/assets/dist/css/base_style.css"></head>
     <style>* { box-sizing: border-box; } body {margin: 0;}*{box-sizing:border-box;}body{margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;}.h1.h1--blue{text-align:center;}.herounit__h2{text-align:center;}.text{text-align:center;}.btn.btn--green.green-btn{background-color:rgb(11, 34, 106);}.btn.green-btn.btn--green-outline.less-shadow{border-top-width:1px;border-right-width:1px;border-bottom-width:1px;border-left-width:1px;border-top-style:solid;border-right-style:solid;border-bottom-style:solid;border-left-style:solid;border-top-color:rgb(43, 176, 49);border-right-color:rgb(43, 176, 49);border-bottom-color:rgb(43, 176, 49);border-left-color:rgb(43, 176, 49);border-image-source:initial;border-image-slice:initial;border-image-width:initial;border-image-outset:initial;border-image-repeat:initial;}.default-container{max-width:1100px;width:100%;margin-top:0px;margin-right:auto;margin-bottom:0px;margin-left:auto;}</style>
     <style>.default-container{max-width:1100px;width:100%;margin:0 auto}</style>
-    <body><main id="main"><section id="ij9g"><div class="default-container"><div class="herounit herounit--no-visual herounit--background sms--herounit"><div class="herounit__description"><h1 class="h1 h1--blue">Features - SMS API Platform
+    <body><link rel="stylesheet" href="https://www.plivo.com/assets/dist/css/base_style.css"/><main id="main"><section id="ij9g"><div class="default-container"><div class="herounit herounit--no-visual herounit--background sms--herounit"><div class="herounit__description"><h1 class="h1 h1--blue">Features - Voice API Platform
           </h1><h2 class="herounit__h2">Powerful SMS functionality for your applications at a global scale
           </h2><div class="space--10">
           </div><div class="buttons-container buttons-container--center"><a href="https://console.plivo.com/accounts/register/" data-title-cache="GET STARTED NOW" title="GET STARTED NOW" class="btn btn-primary blue">GET STARTED NOW</a><a href="/talk-to-an-expert/" data-title-cache="TALK TO AN EXPERT" title="TALK TO AN EXPERT" class="btn btn-outline-primary blue less-shadow">TALK TO AN EXPERT</a></div></div></div></div></section><div class="section-gap">
@@ -17,10 +17,7 @@
             </div><div class="usecase-card__desc light-font">Receive real-time delivery notification of messages sent globally. Track delivery rates and performance of your accounts.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-message-queueing.svg" alt="Icon" title="Message Queueing" id="i1i41"/></div><div class="usecase-card__heading">Message Queueing
             </div><div class="usecase-card__desc light-font">Send multiple SMS in a single API request. We handle the message queueing for you so you don't have to worry about building that.
-            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic_mms.svg" alt="Icon" title="Message Queueing" id="ip6mz"/></div><div class="usecase-card__heading">MMS Rich-media Support
-            </div><div class="usecase-card__desc light-font">Send and receive photos, gifs, videos and more. Support to send and receive picture messages and SMS in the same phone number.
-            </div><div class="grid-link"><a href="/mms/" data-title-cache="Learn More" title="Learn More"><span class="link">Learn More<span class="icon-arrow-large-right"></span></span></a><div>
-              </div></div></div></div></div></div></section><div class="section-gap">
+            </div></div></div></div></div></section><div class="section-gap">
   </div><section id="ib8cy"><div class="default-container font--1rem"><div class="features-grid features-grid--big-icon"><div class="features-grid__heading features-grid__heading--padded"><div class="main-heading main-heading--has-line">Compliance
           </div><div class="space--10">
           </div><div>Built in local, regulatory and data compliance which frees you up to build your application at scale.
@@ -31,22 +28,22 @@
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-smart-rate-limiting.svg" alt="Icon" title="Smart Rate Limiting" id="iyicl"/></div><div class="usecase-card__heading">Smart Rate Limiting
             </div><div class="usecase-card__desc light-font">Stay compliant with messaging frequency and throughput regulations per source number in each country.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-automatic-opt-out-handling.svg" alt="Icon" title="Automatic Opt-out Handling" id="ie0ms"/></div><div class="usecase-card__heading">Automatic Opt-out Handling
-            </div><div class="usecase-card__desc light-font">Replies such as Stop, are automatically handled for you on long codes. Plivo manages the opt-outs in such cases.
+            </div><div class="usecase-card__desc light-font">Replies such as ÂStop, are automatically handled for you on long codes. Plivo manages the opt-outs in such cases.
             </div></div></div></div></div></section><div class="section-gap">
   </div><section><div class="default-container font--1rem"><div class="features-grid features-grid--big-icon"><div class="features-grid__heading features-grid__heading--padded"><div class="main-heading main-heading--has-line main-heading--extended">Improved
             <br/>Message Delivery
           </div><div class="space--10">
           </div><div>Quality based routing engine and other features to ensure the best deliverability across 200 countries.
           </div></div><div class="features-grid__details"><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-intelligent-message-encoding.svg" alt="Icon" title="Intelligent Message Encoding" id="i1nhp"/></div><div class="usecase-card__heading">Intelligent Message Encoding
-            </div><div class="usecase-card__desc light-font">Plivo replaces unicode characters with similar gsm characters to ensure message delivery to destination networks that don&#039;t support unicode.
+            </div><div class="usecase-card__desc light-font">Plivo replaces unicode characters with similar gsm characters to ensure message delivery to destination networks that don't support unicode.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-number-pooling.svg" alt="Icon" title="Number Pooling" id="ivqfte"/></div><div class="usecase-card__heading">Number Pooling
             </div><div class="usecase-card__desc light-font">Improve delivery rate by spreading your messages across a pool of phone numbers to reach your users in time.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-conversion-api.svg" alt="Icon" title="Conversion API" id="ikt5zh"/></div><div class="usecase-card__heading">Conversion API
-            </div><div class="usecase-card__desc light-font">Real time feedback from your application allows Plivo&#039;s self adjusting quality based routing engine to ensures best delivery.
+            </div><div class="usecase-card__desc light-font">Real time feedback from your application allows Plivo's self adjusting quality based routing engine to ensures best delivery.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-local-match.svg" alt="Icon" title="Local Match" id="imliwo"/></div><div class="usecase-card__heading">Local Match
             </div><div class="usecase-card__desc light-font">To improve read rates, auto select a local area number as the sender id for each user from a pool of numbers.
             </div></div></div></div></div></section><div class="section-gap">
-  </div><section><div class="default-container"><div class="main-heading--section main-heading">Faster Time to Market
+  </div><section id="ilxsg5"><div class="default-container"><div class="main-heading--section main-heading">Faster Time to Market
       </div><div class="space--21">
       </div><div class="container--600px center-block center-align font--1rem">Build, Integrate and troubleshoot issues faster. With Plivo focus on building the features that differentiates you and be faster to the market.
       </div><div class="space--21">
@@ -58,7 +55,7 @@
               </div><div class="light-font">Segment your customers based on use case, spend capacity or risk profile and track usage and billing with Sub-Accounts.
               </div></li><li><div class="usecase-card__heading">Detailed Debug Logs
               </div><div class="light-font">Debug and troubleshoot issues and problems faster with detailed logs. Drill down to the details to find the root cause.
-              </div></li></ul></div><div class="zoomed-image"><img src="/assets/dist/new-design/sms/img-fastertime-1.svg" alt="Faster Time to Market" title="Faster Time to Market"/></div></div><div class="space--21 hide-in-mobile">
+              </div></li></ul></div><div class="zoomed-image"><img src="/assets/dist/new-design/sms/img-fastertime-1.svg" alt="Faster Time to Market" title="Faster Time to Market" id="c2136"/></div></div><div class="space--21 hide-in-mobile">
       </div><div class="space--21 hide-in-mobile">
       </div><div class="space--10">
       </div><div class="split-5050 split-5050--shrink split-5050--shrink-3 split--continuous"><div class="zoomed-image zoomed-image--left"><img src="/assets/dist/new-design/sms/img-fastertime-2.svg" alt="Faster Time to Market" title="Faster Time to Market" id="iflvi9"/></div><div><ul class="checklist"><li><div class="usecase-card__heading">Extensive Documentation
@@ -68,7 +65,7 @@
               </div></li><li><div class="usecase-card__heading">Reusable Templates
               </div><div class="light-font">With a vast library of ready to use templates you can add powerful functionality quickly by writing minimal code.
               </div></li></ul></div></div></div></section><div class="section-gap">
-  </div><section><div id="ian0aa" class="default-container"><div><div class="main-heading main-heading--section">It&#039;s easy to get started. Sign up for free.
+  </div><section><div id="ian0aa" class="default-container"><div><div class="main-heading main-heading--section">It's easy to get started. Sign up for free.
         </div><div class="space--21">
         </div><div class="text">Create your account and receive trial credits or get in touch with us
         </div><div class="space--21">
