Revert "Initial Commit"
This reverts commit 2e8d91db8e7cecacfacf168431976405fc0edfad.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,74 @@
----
-layout: home
----
+
+    <head><link rel="stylesheet" href="https://www.plivo.com/assets/dist/css/base_style.css"></head>
+    <style>* { box-sizing: border-box; } body {margin: 0;}*{box-sizing:border-box;}body{margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;}.h1.h1--blue{text-align:center;}.herounit__h2{text-align:center;}.text{text-align:center;}.btn.btn--green.green-btn{background-color:rgb(11, 34, 106);}.btn.green-btn.btn--green-outline.less-shadow{border-top-width:1px;border-right-width:1px;border-bottom-width:1px;border-left-width:1px;border-top-style:solid;border-right-style:solid;border-bottom-style:solid;border-left-style:solid;border-top-color:rgb(43, 176, 49);border-right-color:rgb(43, 176, 49);border-bottom-color:rgb(43, 176, 49);border-left-color:rgb(43, 176, 49);border-image-source:initial;border-image-slice:initial;border-image-width:initial;border-image-outset:initial;border-image-repeat:initial;}.default-container{max-width:1100px;width:100%;margin-top:0px;margin-right:auto;margin-bottom:0px;margin-left:auto;}</style>
+    <style>.default-container{max-width:1100px;width:100%;margin:0 auto}</style>
+    <body><link rel="stylesheet" href="https://www.plivo.com/assets/dist/css/base_style.css"/><main id="main"><section id="ij9g"><div class="default-container"><div class="herounit herounit--no-visual herounit--background sms--herounit"><div class="herounit__description"><h1 class="h1 h1--blue">Features - Voice API Platform
+          </h1><h2 class="herounit__h2">Powerful SMS functionality for your applications at a global scale
+          </h2><div class="space--10">
+          </div><div class="buttons-container buttons-container--center"><a href="https://console.plivo.com/accounts/register/" data-title-cache="GET STARTED NOW" title="GET STARTED NOW" class="btn btn-primary blue">GET STARTED NOW</a><a href="/talk-to-an-expert/" data-title-cache="TALK TO AN EXPERT" title="TALK TO AN EXPERT" class="btn btn-outline-primary blue less-shadow">TALK TO AN EXPERT</a></div></div></div></div></section><div class="section-gap">
+  </div><section><div class="default-container font--1rem"><div class="features-grid features-grid--big-icon"><div class="features-grid__heading features-grid__heading--padded"><div class="main-heading main-heading--has-line">Essentials
+          </div><div class="space--10">
+          </div><div>Essential features already built for you so you can focus on integrating SMS in your application & scale your delivery globally.
+          </div></div><div class="features-grid__details"><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-support-for-any-character-set.svg" alt="Icon" title="Support for any character set" id="iicsa"/></div><div class="usecase-card__heading">Support for any character set
+            </div><div class="usecase-card__desc light-font">Built in GSM & Unicode character set support to allow any language including Chinese, Arabic and others plus emojis & symbols.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-long-message-concatenation.svg" alt="Icon" title="Long Message Concatenation" id="i5yfl"/></div><div class="usecase-card__heading">Long Message Concatenation
+            </div><div class="usecase-card__desc light-font">No more split messages. Long messages are automatically concatenated across global networks seamlessly.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-delivery-report-notifications.svg" alt="Icon" title="Delivery Report Notifications" id="ipr22"/></div><div class="usecase-card__heading">Delivery Report Notifications
+            </div><div class="usecase-card__desc light-font">Receive real-time delivery notification of messages sent globally. Track delivery rates and performance of your accounts.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-message-queueing.svg" alt="Icon" title="Message Queueing" id="i1i41"/></div><div class="usecase-card__heading">Message Queueing
+            </div><div class="usecase-card__desc light-font">Send multiple SMS in a single API request. We handle the message queueing for you so you don't have to worry about building that.
+            </div></div></div></div></div></section><div class="section-gap">
+  </div><section id="ib8cy"><div class="default-container font--1rem"><div class="features-grid features-grid--big-icon"><div class="features-grid__heading features-grid__heading--padded"><div class="main-heading main-heading--has-line">Compliance
+          </div><div class="space--10">
+          </div><div>Built in local, regulatory and data compliance which frees you up to build your application at scale.
+          </div></div><div class="features-grid__details"><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-message-body-purging.svg" alt="Icon" title="Message Body Purging" id="ixmgh"/></div><div class="usecase-card__heading">Message Body Purging
+            </div><div class="usecase-card__desc light-font">SMS message content is never stored within any message detail record. By default all debug logs are purged after 30 days.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-protect-sensitive-data.svg" alt="Icon" title="Protect Sensitive Data" id="irtjr"/></div><div class="usecase-card__heading">Protect Sensitive Data
+            </div><div class="usecase-card__desc light-font">Hospitals and other regulated industries use Plivo globally. Disable logging and mask phone numbers to protect for such use cases.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-smart-rate-limiting.svg" alt="Icon" title="Smart Rate Limiting" id="iyicl"/></div><div class="usecase-card__heading">Smart Rate Limiting
+            </div><div class="usecase-card__desc light-font">Stay compliant with messaging frequency and throughput regulations per source number in each country.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-automatic-opt-out-handling.svg" alt="Icon" title="Automatic Opt-out Handling" id="ie0ms"/></div><div class="usecase-card__heading">Automatic Opt-out Handling
+            </div><div class="usecase-card__desc light-font">Replies such as ÂStop, are automatically handled for you on long codes. Plivo manages the opt-outs in such cases.
+            </div></div></div></div></div></section><div class="section-gap">
+  </div><section><div class="default-container font--1rem"><div class="features-grid features-grid--big-icon"><div class="features-grid__heading features-grid__heading--padded"><div class="main-heading main-heading--has-line main-heading--extended">Improved
+            <br/>Message Delivery
+          </div><div class="space--10">
+          </div><div>Quality based routing engine and other features to ensure the best deliverability across 200 countries.
+          </div></div><div class="features-grid__details"><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-intelligent-message-encoding.svg" alt="Icon" title="Intelligent Message Encoding" id="i1nhp"/></div><div class="usecase-card__heading">Intelligent Message Encoding
+            </div><div class="usecase-card__desc light-font">Plivo replaces unicode characters with similar gsm characters to ensure message delivery to destination networks that don't support unicode.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-number-pooling.svg" alt="Icon" title="Number Pooling" id="ivqfte"/></div><div class="usecase-card__heading">Number Pooling
+            </div><div class="usecase-card__desc light-font">Improve delivery rate by spreading your messages across a pool of phone numbers to reach your users in time.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-conversion-api.svg" alt="Icon" title="Conversion API" id="ikt5zh"/></div><div class="usecase-card__heading">Conversion API
+            </div><div class="usecase-card__desc light-font">Real time feedback from your application allows Plivo's self adjusting quality based routing engine to ensures best delivery.
+            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-local-match.svg" alt="Icon" title="Local Match" id="imliwo"/></div><div class="usecase-card__heading">Local Match
+            </div><div class="usecase-card__desc light-font">To improve read rates, auto select a local area number as the sender id for each user from a pool of numbers.
+            </div></div></div></div></div></section><div class="section-gap">
+  </div><section id="ilxsg5"><div class="default-container"><div class="main-heading--section main-heading">Faster Time to Market
+      </div><div class="space--21">
+      </div><div class="container--600px center-block center-align font--1rem">Build, Integrate and troubleshoot issues faster. With Plivo focus on building the features that differentiates you and be faster to the market.
+      </div><div class="space--21">
+      </div><div class="space--21">
+      </div><div class="space--10">
+      </div><div class="split-5050 split-5050--shrink split-5050--shrink-3"><div><ul class="checklist"><li><div class="usecase-card__heading">Sticky Sender
+              </div><div class="light-font">Interact with customers using the same recognizable phone number or sender ID an ensure a better experience.
+              </div></li><li><div class="usecase-card__heading">Built in Multi-tenancy
+              </div><div class="light-font">Segment your customers based on use case, spend capacity or risk profile and track usage and billing with Sub-Accounts.
+              </div></li><li><div class="usecase-card__heading">Detailed Debug Logs
+              </div><div class="light-font">Debug and troubleshoot issues and problems faster with detailed logs. Drill down to the details to find the root cause.
+              </div></li></ul></div><div class="zoomed-image"><img src="/assets/dist/new-design/sms/img-fastertime-1.svg" alt="Faster Time to Market" title="Faster Time to Market" id="c2136"/></div></div><div class="space--21 hide-in-mobile">
+      </div><div class="space--21 hide-in-mobile">
+      </div><div class="space--10">
+      </div><div class="split-5050 split-5050--shrink split-5050--shrink-3 split--continuous"><div class="zoomed-image zoomed-image--left"><img src="/assets/dist/new-design/sms/img-fastertime-2.svg" alt="Faster Time to Market" title="Faster Time to Market" id="iflvi9"/></div><div><ul class="checklist"><li><div class="usecase-card__heading">Extensive Documentation
+              </div><div class="light-font">With our detailed documentation and sample code get started in minutes. Just copy paste code samples in most cases.
+              </div></li><li><div class="usecase-card__heading">Server Side SDKs
+              </div><div class="light-font">Program in your web language of choice with our server side SDKs in Java, C#, Python, Ruby, Nodejs or Golang.
+              </div></li><li><div class="usecase-card__heading">Reusable Templates
+              </div><div class="light-font">With a vast library of ready to use templates you can add powerful functionality quickly by writing minimal code.
+              </div></li></ul></div></div></div></section><div class="section-gap">
+  </div><section><div id="ian0aa" class="default-container"><div><div class="main-heading main-heading--section">It's easy to get started. Sign up for free.
+        </div><div class="space--21">
+        </div><div class="text">Create your account and receive trial credits or get in touch with us
+        </div><div class="space--21">
+        </div><div class="buttons-container buttons-container--center"><a href="https://console.plivo.com/accounts/register/" data-title-cache="GET STARTED NOW" title="GET STARTED NOW" class="btn btn--green green-btn">GET STARTED NOW</a><a href="/talk-to-an-expert/" data-title-cache="TALK TO AN EXPERT" title="TALK TO AN EXPERT" class="btn green-btn btn--green-outline less-shadow">TALK TO AN EXPERT</a></div></div></div></section><div class="section-gap">
+  </div></main></body>
+    
