--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 
-    <head><link rel="stylesheet" href="https://www.plivo.com/assets/dist/css/base_style.css"></head>
     <style>* { box-sizing: border-box; } body {margin: 0;}*{box-sizing:border-box;}body{margin-top:0px;margin-right:0px;margin-bottom:0px;margin-left:0px;}.h1.h1--blue{text-align:center;}.herounit__h2{text-align:center;}.text{text-align:center;}.btn.btn--green.green-btn{background-color:rgb(11, 34, 106);}.btn.green-btn.btn--green-outline.less-shadow{border-top-width:1px;border-right-width:1px;border-bottom-width:1px;border-left-width:1px;border-top-style:solid;border-right-style:solid;border-bottom-style:solid;border-left-style:solid;border-top-color:rgb(43, 176, 49);border-right-color:rgb(43, 176, 49);border-bottom-color:rgb(43, 176, 49);border-left-color:rgb(43, 176, 49);border-image-source:initial;border-image-slice:initial;border-image-width:initial;border-image-outset:initial;border-image-repeat:initial;}.default-container{max-width:1100px;width:100%;margin-top:0px;margin-right:auto;margin-bottom:0px;margin-left:auto;}</style>
-    <style>.default-container{max-width:1100px;width:100%;margin:0 auto}</style>
-    <body><link rel="stylesheet" href="https://www.plivo.com/assets/dist/css/base_style.css"/><main id="main"><section id="ij9g"><div class="default-container"><div class="herounit herounit--no-visual herounit--background sms--herounit"><div class="herounit__description"><h1 class="h1 h1--blue">Features - Voice API Platform
-          </h1><h2 class="herounit__h2">Powerful SMS functionality for your applications at a global scale
-          </h2><div class="space--10">
+    <main><link rel="stylesheet" href="https://www.plivo.com/assets/dist/css/base_style.css"/><link rel="stylesheet" href="https://www.plivo.com/assets/dist/css/base_style.css"/><main id="main"><section id="ij9g"><div class="default-container"><div class="herounit herounit--no-visual herounit--background sms--herounit"><div class="herounit__description"><h1 class="h1 h1--blue">Features - Edited Version</h1><h2 class="herounit__h2">This is edited Today. Built using EasyPress</h2><div class="space--10">
           </div><div class="buttons-container buttons-container--center"><a href="https://console.plivo.com/accounts/register/" data-title-cache="GET STARTED NOW" title="GET STARTED NOW" class="btn btn-primary blue">GET STARTED NOW</a><a href="/talk-to-an-expert/" data-title-cache="TALK TO AN EXPERT" title="TALK TO AN EXPERT" class="btn btn-outline-primary blue less-shadow">TALK TO AN EXPERT</a></div></div></div></div></section><div class="section-gap">
   </div><section><div class="default-container font--1rem"><div class="features-grid features-grid--big-icon"><div class="features-grid__heading features-grid__heading--padded"><div class="main-heading main-heading--has-line">Essentials
           </div><div class="space--10">
           </div><div>Essential features already built for you so you can focus on integrating SMS in your application & scale your delivery globally.
-          </div></div><div class="features-grid__details"><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-support-for-any-character-set.svg" alt="Icon" title="Support for any character set" id="iicsa"/></div><div class="usecase-card__heading">Support for any character set
-            </div><div class="usecase-card__desc light-font">Built in GSM & Unicode character set support to allow any language including Chinese, Arabic and others plus emojis & symbols.
+          </div></div><div class="features-grid__details"><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-support-for-any-character-set.svg" alt="Icon" title="Support for any character set" id="iicsa"/></div><div class="usecase-card__heading">Edited set</div><div class="usecase-card__desc light-font">Built in GSM & Unicode character set support to allow any language including Chinese, Arabic and others plus emojis & symbols.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-long-message-concatenation.svg" alt="Icon" title="Long Message Concatenation" id="i5yfl"/></div><div class="usecase-card__heading">Long Message Concatenation
             </div><div class="usecase-card__desc light-font">No more split messages. Long messages are automatically concatenated across global networks seamlessly.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-delivery-report-notifications.svg" alt="Icon" title="Delivery Report Notifications" id="ipr22"/></div><div class="usecase-card__heading">Delivery Report Notifications
@@ -28,7 +23,7 @@
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-smart-rate-limiting.svg" alt="Icon" title="Smart Rate Limiting" id="iyicl"/></div><div class="usecase-card__heading">Smart Rate Limiting
             </div><div class="usecase-card__desc light-font">Stay compliant with messaging frequency and throughput regulations per source number in each country.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-automatic-opt-out-handling.svg" alt="Icon" title="Automatic Opt-out Handling" id="ie0ms"/></div><div class="usecase-card__heading">Automatic Opt-out Handling
-            </div><div class="usecase-card__desc light-font">Replies such as ÂStop, are automatically handled for you on long codes. Plivo manages the opt-outs in such cases.
+            </div><div class="usecase-card__desc light-font">Replies such as ÃÂStop, are automatically handled for you on long codes. Plivo manages the opt-outs in such cases.
             </div></div></div></div></div></section><div class="section-gap">
   </div><section><div class="default-container font--1rem"><div class="features-grid features-grid--big-icon"><div class="features-grid__heading features-grid__heading--padded"><div class="main-heading main-heading--has-line main-heading--extended">Improved
             <br/>Message Delivery
@@ -38,8 +33,6 @@
             </div><div class="usecase-card__desc light-font">Plivo replaces unicode characters with similar gsm characters to ensure message delivery to destination networks that don't support unicode.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-number-pooling.svg" alt="Icon" title="Number Pooling" id="ivqfte"/></div><div class="usecase-card__heading">Number Pooling
             </div><div class="usecase-card__desc light-font">Improve delivery rate by spreading your messages across a pool of phone numbers to reach your users in time.
-            </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-conversion-api.svg" alt="Icon" title="Conversion API" id="ikt5zh"/></div><div class="usecase-card__heading">Conversion API
-            </div><div class="usecase-card__desc light-font">Real time feedback from your application allows Plivo's self adjusting quality based routing engine to ensures best delivery.
             </div></div><div class="features-grid__points usecase-card"><div class="usecase-card__icon"><img src="/assets/dist/new-design/sms/ic-local-match.svg" alt="Icon" title="Local Match" id="imliwo"/></div><div class="usecase-card__heading">Local Match
             </div><div class="usecase-card__desc light-font">To improve read rates, auto select a local area number as the sender id for each user from a pool of numbers.
             </div></div></div></div></div></section><div class="section-gap">
@@ -70,5 +63,5 @@
         </div><div class="text">Create your account and receive trial credits or get in touch with us
         </div><div class="space--21">
         </div><div class="buttons-container buttons-container--center"><a href="https://console.plivo.com/accounts/register/" data-title-cache="GET STARTED NOW" title="GET STARTED NOW" class="btn btn--green green-btn">GET STARTED NOW</a><a href="/talk-to-an-expert/" data-title-cache="TALK TO AN EXPERT" title="TALK TO AN EXPERT" class="btn green-btn btn--green-outline less-shadow">TALK TO AN EXPERT</a></div></div></div></section><div class="section-gap">
-  </div></main></body>
+  </div></main></main>
     
